# arc-verifier

./: .dockerignore  .env.example  .gitignore  AUDIT.md  COMPLETION_SUMMARY.md  COMPOSITE_CIRCUIT_EXPLAINED.md  DEMO_SUMMARY.md  DEMO_SUMMARY.txt  DEPLOYMENT.md  Dockerfile  END_TO_END_TEST.md  INTEGRATION_COMPLETE.md  INTEGRATION_DEMO.md  PHASE2_COMPLETE.md  PHASE2_SUCCESS.md  README.md  RENDER_DEPLOYMENT.md  SESSION_SUMMARY.md  SUMMARY.md  TEST_RESULTS.md  render.yaml
arecibo/: .clippy.toml  .gitignore  Cargo.toml  rustfmt.toml
arecibo/src/: constants.rs  digest.rs  errors.rs  lib.rs
arecibo/src/cyclefold/: circuit.rs  gadgets.rs  mod.rs  util.rs
arecibo/src/frontend/: constraint_system.rs  domain.rs  lc.rs  mod.rs  r1cs.rs  shape_cs.rs  test_shape_cs.rs
arecibo/src/frontend/gadgets/: multieq.rs  num.rs
arecibo/src/frontend/gadgets/poseidon/: circuit2.rs  circuit2_witness.rs  mod.rs  poseidon_inner.rs  round_constants.rs
arecibo/src/frontend/gpu/: error.rs  mod.rs  nogpu.rs
arecibo/src/frontend/groth16/: ext.rs  generator.rs  mapped_params.rs  mod.rs  multiexp.rs  multiscalar.rs  params.rs  proof.rs  verifier.rs  verifying_key.rs
arecibo/src/frontend/groth16/aggregate/: accumulator.rs  commit.rs  inner_product.rs  mod.rs  poly.rs  proof.rs  prove.rs  srs.rs  transcript.rs  verify.rs
arecibo/src/frontend/groth16/prover/: mod.rs  native.rs
arecibo/src/frontend/util_cs/: test_cs.rs  witness_cs.rs
arecibo/src/gadgets/: ecc.rs  emulated.rs  hypernova.rs  int.rs  lookup.rs  mod.rs  nebula.rs  r1cs.rs  utils.rs
arecibo/src/gadgets/nonnative/: bignat.rs  util.rs
arecibo/src/hypernova/: augmented_circuit.rs  compression.rs  error.rs  mod.rs  nifs.rs  pp.rs  ro_sumcheck.rs  rs.rs  utils.rs
arecibo/src/hypernova/nebula/: api.rs  ic.rs  mod.rs  product_circuits.rs  tests.rs
arecibo/src/nebula/: augmented_circuit.rs  ic.rs  mod.rs  nifs.rs  rs.rs  traits.rs
arecibo/src/nebula/audit_rs/: augmented_circuit.rs  mod.rs
arecibo/src/nebula/compression/: mod.rs
arecibo/src/nebula/layer_2/: mod.rs  nifs.rs  utils.rs
arecibo/src/nebula/layer_2/aggregation/: compression.rs  mod.rs  verifier_circuit.rs
arecibo/src/nebula/layer_2/gadgets/: mod.rs  r1cs.rs  test.rs
arecibo/src/nebula/layer_2/sharding/: compression.rs  mod.rs  verifier_circuit.rs
arecibo/src/nova/: circuit.rs  mod.rs  nifs.rs
arecibo/src/onchain/: mod.rs
arecibo/src/onchain/compressed/: circuit.rs  mod.rs
arecibo/src/onchain/eth/: evm.rs  mod.rs
arecibo/src/onchain/gadgets/: domain.rs  eval.rs  fold.rs  hash.rs  kzg.rs  mod.rs
arecibo/src/onchain/test/: circuit.rs  full_flow.rs  fund_circuit.rs  fund_flow.rs  fund_flow_simple.rs  mod.rs
arecibo/src/onchain/utils/: encoding.rs  mod.rs
arecibo/src/onchain/verifiers/: groth16.rs  kzg.rs  mod.rs  nebula.rs
arecibo/src/provider/: bn256_grumpkin.rs  hyperkzg.rs  ipa_pc.rs  keccak.rs  kzg_commitment.rs  mod.rs  non_hiding_zeromorph.rs  pasta.rs  pedersen.rs  poseidon.rs  traits.rs
arecibo/src/provider/util/: fb_msm.rs  mod.rs
arecibo/src/r1cs/: mod.rs  sparse.rs  split.rs  util.rs
arecibo/src/spartan/: batched.rs  batched_ppsnark.rs  lin_snark.rs  mod.rs  ppsnark.rs  snark.rs  tiny_batched_ppsnark.rs
arecibo/src/spartan/polys/: univariate.rs
arecibo/src/spartan/sumcheck/: engine.rs  mod.rs
arecibo/src/spartan/verify_circuit/ipa_prover_poseidon/: tests.rs
arecibo/src/supernova/: mod.rs  snark.rs
arecibo/src/supernova/cyclefold/: augmented_circuit.rs  mod.rs
arecibo/src/traits/: circuit.rs  commitment.rs  evaluation.rs  mod.rs  snark.rs
arecibo/templates/: groth16_verifier.askama.sol
circuits/: Cargo.toml
circuits/examples/: generate_proofs.rs  generate_real_nova_proof.rs  nova_proof_with_verifier.rs  whitelist_nova_verifier.rs
circuits/src/: composite_circuit.rs  lib.rs  liquidity_reserve.rs  nova_circuits.rs  position_limit.rs  range_proof.rs  utils.rs  whitelist.rs
contracts/: deploy_output.txt  fund-proof.inputs
(+64 files in other folders)
