[package]
name = "arecibo"
version = "0.2.0"
authors = [
  "Srinath Setty <srinath@microsoft.com>",
  "Lurk Engineering <engineering@lurk-lab.com>",
]
edition = "2021"
description = "Recursive zkSNARKs without trusted setup"
documentation = "https://docs.rs/arecibo/"
readme = "README.md"
repository = "https://github.com/lurk-lab/arecibo"
license-file = "LICENSE"
keywords = ["zkSNARKs", "cryptography", "proofs"]
rust-version = "1.74.1"

[dependencies]
ff = { version = "0.13.0", features = ["derive"] }
digest = "0.10"
halo2curves = { git = "https://github.com/ICME-Lab/halo2curves", branch = "main", features = ["bits", "derive_serde"] }
sha3 = "0.10"
rayon = "1.7"
rand_core = { version = "0.6", default-features = false }
rand_chacha = "0.3"
pasta_curves = { version = "0.5.0", features = ["repr-c", "serde"] }
generic-array = "1.0.0"
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2"
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = "1.3"
bitvec = "1.0"
byteorder = "1.4.3"
thiserror = "1.0"
group = "0.13.0"
pairing = "0.23.0"
tracing = "0.1.37"
once_cell = "1.18.0"
itertools = "0.13.0"                                                     # zip_eq
rand = "0.8.5"
ref-cast = "1.0.20"                                                      # allocation-less conversion in multilinear polys
derive_more = { version = "1.0.0", features = ["full"] }
static_assertions = "1.1.0"
rayon-scan = "0.1.0"
serde_json = { version = "1.0" }
memmap2 = "0.9.5"
log = "0.4.25"
crossbeam-channel = "0.5.14"
hex = "0.4"
msm-webgpu = { git = "https://github.com/ICME-Lab/msm-webgpu", branch = "master" }
ec-gpu-gen = { version = "0.7.1" }
num-integer = "0.1.46"

# Onchain verifier
askama = { version = "0.12.0", features = ["config"], default-features = false }
revm = {version="19.5.0", default-features=false, features=["std"]}

[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
grumpkin-msm = { git = "https://github.com/ICME-Lab/grumpkin-msm", branch = "dev" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.0", default-features = false, features = ["js"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
proptest = "1.2.0"
pprof = { version = "0.13", optional = true } # in benches under feature "flamegraph"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[dev-dependencies]
hex = "0.4.3"
expect-test = "1.4.1"
tracing-texray = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rand_xorshift = "0.3.0"
env_logger = "0.11.6"
wasm-bindgen-test = "0.3.50"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.77"
web-sys = { version = "0.3", features = ["console"] }
wgpu = "24.0.3"

[features]
default = []
abomonate = []
asm = ["halo2curves/asm"]
# Compiles in portable mode, w/o ISA extensions => binary can be executed on all systems.
portable = ["grumpkin-msm/portable"]
cuda = ["grumpkin-msm/cuda"]
flamegraph = ["pprof/flamegraph", "pprof/criterion"]
opencl = []
light_onchain_prover = []
nightly = []
solidity = []

[profile.dev-ci]
inherits = "dev"
# By compiling dependencies with optimizations, performing tests gets much faster.
opt-level = 3
lto = "thin"
incremental = false
codegen-units = 16
